--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <div class="header">
-  <img src="bg.PNG"; alt="Have a nice day : )"; style="width: 100%; max-height: 100%">
+  <img src="bg.jpg"; alt="Have a nice day : )"; style="width: 100%; max-height: 100%">
  </div>
 
 
