--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	  	<img class ="avatar" src="photo.JPG" alt="A beauty :p" >
 			<p class="p1">Jingjie Zhang 张劲节</p>
 			<p class="p2">I'm an Assistant Professor in the School of Banking and Finance at University of International Business and Economics. I received my Ph.D. degree from the<a href="http://umich.edu"> University of Michigan</a> in 2021, under the supervision of Prof. <a href="http://www.math.lsa.umich.edu/~erhan/">Erhan Bayraktar</a> and Prof. <a href="https://sites.google.com/a/umich.edu/indrajitmitra/">Indrajit Mitra</a>.</p>
-			<p class="p2">The complete profile can be found here ~ <a href="">My CV</a>.</p>
+			<p class="p2">The complete profile can be found here ~ <a href="CV_Jingjie Zhang.pdf">My CV</a>.</p>
 			<p class="p2"> Contact me via e-mail: <a href="mailto:jingjie.zhang@uibe.edu.cn">jingjie.zhang@uibe.edu.cn</a>.</p>
 		</div>
 	</div>
@@ -107,6 +107,9 @@
 			</li>
 			</div>
 	</div>
+</div>
+<div class="footer">
+	<p class='pf'>Copyright &copy 2022 by Jingjie Zhang </p>
 </div>
 
 </body>
