--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	  	<img class ="avatar" src="photo.JPG" alt="A beauty :p" >
 			<p class="p1">Jingjie Zhang 张劲节</p>
 			<p class="p2">I'm an Assistant Professor in the School of Banking and Finance at University of International Business and Economics. I received my Ph.D. degree from the<a href="http://umich.edu"> University of Michigan</a> in 2021, under the supervision of Prof. <a href="http://www.math.lsa.umich.edu/~erhan/">Erhan Bayraktar</a> and Prof. <a href="https://sites.google.com/a/umich.edu/indrajitmitra/">Indrajit Mitra</a>.</p>
-			<p class="p2">The complete profile can be found here ~ <a href="CV_Jingjie Zhang.pdf">My CV</a>.</p>
+			<p class="p2">The complete profile can be found here ~ <a href="CV_JingjieZhang.pdf">My CV</a>.</p>
 			<p class="p2"> Contact me via e-mail: <a href="mailto:jingjie.zhang@uibe.edu.cn">jingjie.zhang@uibe.edu.cn</a>.</p>
 		</div>
 	</div>
@@ -32,15 +32,17 @@
 	<div  name="research" style="clear:left;" class = "post">
 		<div style="padding:0rem 2rem; border: 3px dotted mistyrose;">
 		<a id="research"><h2 name="research">Research</h2></a> 
-		<p class="p2">My research is focused on stochastic control, game theory and their applications in Mathematical Finance and Financial Economics.</p>
+		<p class="p2">My research is focused on stochastic control, game theory and their applications in Mathematical Finance, Financial Economics and FinTech.</p>
 		<h3>Publications and Preprints</h3>
 		<ul class="body">
 			<li class="body">
-				<p class="p2">Diffusions on Graph as Time Changed Multi-parameter Processes, with E. Bayraktar and X. Zhang, Working Paper, 2022. <a href="https://arxiv.org/abs/2204.07101">[arXiv].</a>
+				<p class="p2">Walsh Diffusions as Time Changed Multi-parameter Processes, with Erhan Bayraktar and Xin Zhang, Working Paper. <a href="https://arxiv.org/abs/2204.07101">[arXiv]</a>.
+				</p>
+				<p class="p2">A Quantitative Comparison of Unemployment Benefit Extension and Level Increase, with Erhan Bayraktar and Indrajit Mitra. <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4414325">[SSRN}]</a>.
 				</p>
 			</li>
 			<li class="body">
-				<p class="p2">Countercyclical Unemployment Benefits: General Equilibrium Analysis of Transition Dynamics, with E. Bayraktar and I. Mitra, Working Paper, 2021. <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3925579">[SSRN].</a>
+				<p class="p2">Countercyclical Unemployment Benefits: General Equilibrium Analysis of Transition Dynamics, with Erhan Bayraktar and Indrajit Mitra, Mathematics and Financial Economics, 2024 <a href="https://link.springer.com/article/10.1007/s11579-023-00351-x">[Article].</a>
 				</p>
 			</li>
 			<li class="body">
@@ -55,6 +57,8 @@
 		<h3>Invited Talks</h3>
 		<ul class="body">
 			<li class="body">
+				<p class="p2"> Recent Advances in Stochastic Control, Machine Learning and Quantitative Finance, Shanghai, China, April 16, 2024.
+				</p>
 				<p class="p2"> Optimal Stopping and Free Boundary Problems, University of Leeds, UK, January 15, 2020
 				</p>
 			</li>
@@ -75,7 +79,13 @@
 		<h3>University of International Business and Economics</h3>
 		<ul class="body">
 			<li class="body">
-				<p class="p2"> Programing in Python (IFI102), Spring 2022.
+				<p class="p2"> Applied Stochastic Process (CUR204), Spring 2023, Spring 2024.
+				</p>
+				<p class="p2"> Programming in Python (IFI102), Spring 2022, Spring 2023, Spring 2024.
+				</p>
+				<p class="p2"> Microeconomics (ECON104), Fall 2022, Fall 2023. 
+				</p>
+				<p class="p2"> Topics in FinTech (SCUR303), Fall 2023, Spring 2024.
 				</p>
 			</li>
 		</ul >
