--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
 			<li class="body">
 				<p class="p2">Walsh Diffusions as Time Changed Multi-parameter Processes, with Erhan Bayraktar and Xin Zhang, Working Paper. <a href="https://arxiv.org/abs/2204.07101">[arXiv]</a>.
 				</p>
-				<p class="p2">A Quantitative Comparison of Unemployment Benefit Extension and Level Increase, with Erhan Bayraktar and Indrajit Mitra. <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4414325">[SSRN}]</a>.
+				<p class="p2">A Quantitative Comparison of Unemployment Benefit Extension and Level Increase, with Erhan Bayraktar and Indrajit Mitra. <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4414325">[SSRN]</a>.
 				</p>
 			</li>
 			<li class="body">
-				<p class="p2">Countercyclical Unemployment Benefits: General Equilibrium Analysis of Transition Dynamics, with Erhan Bayraktar and Indrajit Mitra, Mathematics and Financial Economics, 2024 <a href="https://link.springer.com/article/10.1007/s11579-023-00351-x">[Article].</a>
+				<p class="p2">Countercyclical Unemployment Benefits: General Equilibrium Analysis of Transition Dynamics, with Erhan Bayraktar and Indrajit Mitra, Mathematics and Financial Economics, 2024 <a href="https://link.springer.com/article/10.1007/s11579-023-00351-x">[Article]</a>.
 				</p>
 			</li>
 			<li class="body">
-				<p class="p2"> Time Consistent Stopping for the Mean-Standard Deviation Problem — the Discrete Time Case, with E. Bayraktar and Z. Zhou, SIAM Journal on Financial Mathematics, 10(3), 667-697, 2019. <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3128866">[SSRN], <a href="https://epubs.siam.org/doi/10.1137/18M1216432">[Article].</a>
+				<p class="p2"> Time Consistent Stopping for the Mean-Standard Deviation Problem — the Discrete Time Case, with E. Bayraktar and Z. Zhou, SIAM Journal on Financial Mathematics, 10(3), 667-697, 2019. <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3128866">[SSRN]</a>, <a href="https://epubs.siam.org/doi/10.1137/18M1216432">[Article]</a>.
 				</p>
 			</li>
 			<li class="body">
-				<p class="p2"> Equilibrium concepts for time-inconsistent stopping problems in continuous time, with E. Bayraktar and Z. Zhou,  Mathematical Finance. 2020; 1– 23. <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3448620">[SSRN], <a href="https://doi.org/10.1111/mafi.12293">[Article]. </a>
+				<p class="p2"> Equilibrium concepts for time-inconsistent stopping problems in continuous time, with E. Bayraktar and Z. Zhou,  Mathematical Finance. 2020; 1– 23. <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3448620">[SSRN]</a>, <a href="https://doi.org/10.1111/mafi.12293">[Article]</a>.
 				</p>
 			</li>
 		</ul >
